# CraftConnect_Backend

./: README.md  ServiceAccountKey.json  database.db  firebase_admin.json  main.py  pyproject.toml
assets/: database.sqlite
configurations/: config.py  db.py
controllers/: __init__.py  artisan_controller.py  category_controller.py  service.py  service_controller.py  user.py  user_controller.py
core/: __init__.py  config.py  crud.py  database.py  dependency.py
dependencies/: crud.py  deps.py
migrations/: env.py
migrations/versions/: 064656dfc79b_alembic_setup_age.py  5143140b5ec9_alembic_setup.py  5bba967044bc_alembic_setup_age.py  6030d95e2ee8_alembic_setup_age.py  6403ec5a0b9a_alembic_setup_age.py  a01396960e72_alembic_setup_age.py  a4e98f223001_alembic_setup.py
models/: __init__.py  api_response.py  artisan.py  category.py  config_models.py  order.py  service.py  tables.py  test.py  user.py  user_models.py
routes/: __init__.py  artisan.py  artisan_route.py  auth.py  authentication_route.py  booking_route.py  category_route.py  orders_route.py  post_ad_route.py  review_route.py  service_route.py  services.py  user_route.py  users.py
utils/: __init__.py  create.py  format.py  password.py  utils.py  verify.py
