[tool.poetry]
name = "craftconnect"
version = "0.1.0"
description = "A platform that connects artisans with customers, providing a marketplace for artisanal goods and services."
authors = ["Cozyamy <cozyamy@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
